--- a/src/main/resources/templates/alterarCliente.html
+++ b/src/main/resources/templates/alterarCliente.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Winery:: Cadastro Cliente</title>
+    <title>Winery:: Alterar Cliente</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <style>
@@ -50,11 +50,11 @@
                     </li>
                    
                     <li class="nav-item ml-auto">
-                        <a class="nav-link text-white" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">
+                        <a class="nav-link text-white" href="#" data-bs-toggle="modal" data-bs-target="#alterarClienteModal">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
                               </svg>
-                            Entrar
+                            bellicoth
                         </a>
                     </li>
                 </ul>
@@ -62,104 +62,45 @@
         </div>
     </nav>
     
-    <!-- Modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-        <div class="modal-conten fundoDoFormulario">
+     
+     <!-- Modal Endereco -->
+     <div class="modal fade" id="alterarClienteModal" tabindex="-1" aria-labelledby="alterarClienteLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+        <div class="modal-content fundoDoFormulario">
             <div class="modal-header">
-            <h5 class="modal-title text-white" id="loginModalLabel">Entrar</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h5 class="modal-title text-white" id="alterarClienteLabel">Alterar dados</h5>
+            <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close" style="background-color: white;"></button>
             </div>
             <div class="modal-body">
-            <form>
-                <div class="mb-3">
-                <label for="email" class="form-label text-white">Email</label>
-                <input type="email" class="form-control" id="email">
-                </div>
-                <div class="mb-3">
-                <label for="password" class="form-label text-white">Senha</label>
-                <input type="password" class="form-control" id="password">
-                </div>
-                <button type="submit" class="btn btn-primary">Entrar</button>
-                <button type="submit" class="btn btn-secondary">Cadastrar</button>
+            <form class="row g-3">
+                <div class="col-md-6">
+                    <label for="" class="form-label text-white">Nome completo</label>
+                    <input type="text" class="form-control" id="">
+                  </div>
+                  <div class="col-md-3">
+                    <label for="inputGenero" class="form-label text-white">Gênero</label>
+                    <select id="inputGenero" class="form-select">
+                      <option selected>Masculino</option>
+                      <option>Feminino</option>
+                    </select>
+                  </div>
+                  <div class="col-md-3">
+                    <label for="" class="form-label text-white">Data de Nascimento</label>
+                    <input type="text" class="form-control" id="">
+                  </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#enderecoModal">Adicionar Novo Endereço</button>
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="btn btn-primary">Sign in</button>
+                    </div>
             </form>
             </div>
         </div>
         </div>
     </div>
-    <div class="container corFundo">
-        <h2 class="text-white">Formulario de Cadastro</h2>
-        <form class="row g-3">
-            <div class="col-md-6">
-                <label for="" class="form-label text-white">Nome completo</label>
-                <input type="text" class="form-control" id="">
-              </div>
-              <div class="col-md-3">
-                <label for="inputGenero" class="form-label text-white">Gênero</label>
-                <select id="inputGenero" class="form-select">
-                  <option selected>Masculino</option>
-                  <option>Feminino</option>
-                </select>
-              </div>
-              <div class="col-md-3">
-                <label for="" class="form-label text-white">Data de Nascimento</label>
-                <input type="text" class="form-control" id="">
-              </div>
-              <div class="col-md-6">
-                <label for="" class="form-label text-white">CPF</label>
-                <input type="text" class="form-control" id="">
-              </div>
-            <div class="col-md-6">
-              <label for="" class="form-label text-white">Email</label>
-              <input type="email" class="form-control" id="">
-            </div>
-            <div class="col-md-6">
-              <label for="" class="form-label text-white">Digite a senha:</label>
-              <input type="password" class="form-control" id="">
-            </div>
-            <div class="col-md-6">
-                <label for="" class="form-label text-white">Confirme a senha:</label>
-                <input type="password" class="form-control" id="">
-              </div>
-            <div class="col-6">
-              <label for="" class="form-label text-white">Endereço</label>
-              <input type="text" class="form-control" id="" placeholder="1234 Main St">
-            </div>
-            <div class="col-3">
-                <label for="" class="form-label text-white">Numero</label>
-                <input type="text" class="form-control" id="" placeholder="1234 Main St">
-              </div>
-            <div class="col-3">
-                <label for="" class="form-label text-white">Complemento</label>
-                <input type="text" class="form-control" id="" placeholder="1234 Main St">
-              </div>
-            <div class="col-md-3">
-                <label for="" class="form-label text-white">Bairro</label>
-                <input type="text" class="form-control" id="">
-              </div>
-            <div class="col-md-3">
-                <label for="" class="form-label text-white">CEP</label>
-                <input type="text" class="form-control" id="">
-            </div>
-            <div class="col-md-3">
-              <label for="" class="form-label text-white">Cidade</label>
-              <input type="text" class="form-control" id="">
-            </div>
-            <div class="col-md-3">
-                <label for="" class="form-label text-white">Estado</label>
-                <input type="text" class="form-control" id="">
-              </div>
-            <div class="col-12">
-                <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#enderecoModal">Adicionar Endereço 2</button>
-            </div>
-            <div class="col-12">
-              <button type="submit" class="btn btn-primary">Cadastrar</button>
-            </div>
-          </form>
-    </div>
-    </div>
-     <!-- Modal Endereco -->
-     <div class="modal fade" id="enderecoModal" tabindex="-1" aria-labelledby="enderecoModalLabel" aria-hidden="true">
+
+    <div class="modal fade" id="enderecoModal" tabindex="-1" aria-labelledby="enderecoModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl">
         <div class="modal-content fundoDoFormulario">
             <div class="modal-header">
@@ -195,9 +136,6 @@
                   <div class="col-md-3">
                       <label for="inputEstado" class="form-label text-white">Estado</label>
                       <input type="text" class="form-control" id="inputEstado">
-                    </div>
-                    <div class="col-12">
-                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#enderecoModal">Adicionar Endereço 2</button>
                     </div>
                     <div class="col-12">
                       <button type="submit" class="btn btn-primary">Sign in</button>
