--- a/src/main/resources/templates/checkoutPagamento.html
+++ b/src/main/resources/templates/checkoutPagamento.html
@@ -378,6 +378,7 @@
     <!-- End of .container -->
 
     <script src="/js/checkout.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
 
