--- a/src/main/resources/templates/detalhesPedidoCliente.html
+++ b/src/main/resources/templates/detalhesPedidoCliente.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Winery:: Confirmação do Pedido</title>
     <link th:href="@{/imagens/faviconWinery.png}" rel="shortcut icon" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -173,22 +175,17 @@
                             <li class="list-group-item py-3"
                                 style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
                                 <div class="row">
-                                    <div class="col-md-1 text-white">
-                                        <strong>Imagem</strong>
-                                    </div>
-                                    <div class="col-md-2 text-white">
-                                        <strong></strong>
-                                    </div>
-                                    <div class="col-md-2 text-white">
+                                    
+                                    <div class="col-md-3 text-white">
                                         <strong>Nome</strong>
                                     </div>
-                                    <div class="col-md-2 text-white">
+                                    <div class="col-md-3 text-white">
                                         <strong></strong>
                                     </div>
-                                    <div class="col-md-1 text-white">
+                                    <div class="col-md-2 text-white">
                                         <strong >Quantidade</strong>
                                     </div>
-                                    <div class="col-md-1 text-white">
+                                    <div class="col-md-2 text-white">
                                         <strong></strong>
                                     </div>
                                     <div class="col-md-1 text-white">
@@ -201,22 +198,16 @@
                             <li th:each="itemPedido : ${pedido.itensPedido}" class="list-group-item py-3"
                                 style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
                                 <div class="row align-items-center">
-                                    <div class="col-md-1 text-white">
-                                        <img th:src="@{${itemPedido.imagemPrincipal}}" class="produto-imagem" style="max-width: 150px; height: auto;">
-                                    </div>
-                                    <div class="col-md-2 text-white">
-                                        <strong></strong>
-                                    </div>
-                                    <div class="col-md-2 text-white">
+                                    <div class="col-md-3 text-white">
                                         <strong th:text="${itemPedido.nome}"></strong>
                                     </div>
-                                    <div class="col-md-2 text-white">
+                                    <div class="col-md-3 text-white">
                                         <strong></strong>
                                     </div>
-                                    <div class="col-md-1 text-white  align-items-center">
+                                    <div class="col-md-2 text-white  align-items-center">
                                         <strong th:text="${itemPedido.quantidade}"></strong>
                                     </div>
-                                    <div class="col-md-1 text-white">
+                                    <div class="col-md-2 text-white">
                                         <strong></strong>
                                     </div>
                                     <div class="col-md-1 text-white">
@@ -269,7 +260,7 @@
                                 <span id="formaPagamentoSelecionadaValor"  th:text="${pedido.formaPagamento}"></span>
                             </h6>
 
-                            <span id="parcelasTexto" style="color: white;"></span>
+                            <span  th:if="${pedido.formaPagamento== 'cartaoDeCredito'}" id="parcelasTexto" style="color: white;" th:text="${'Número de parcelas: ' +pedido.numeroParcelas}"></span>
 
                             <h3 class="text-white mt-4"><b>Total: R$ <span id="valorTotal" th:text="${pedido.valorTotal}"></span></b></h3>
                         </div>
@@ -436,7 +427,9 @@ if (valorDosProdutosElement) {
     console.error("Elemento HTML não encontrado.");
 }
 
+// Função para verificar se a sessão está ativa
 function isSessionActive(callback) {
+    // Fazer uma requisição para a rota do controlador
     fetch('/verificar-sessao')
       .then(response => response.json())
       .then(data => {
@@ -448,24 +441,31 @@ function isSessionActive(callback) {
       });
   }
 
+  // Função para alternar entre "Meu perfil" e "Faça login/crie seu login"
   function toggleSessionElements() {
     const perfilButton = document.getElementById("perfil-button");
     const loginLink = document.getElementById("login-link");
 
     isSessionActive(function (isSessionActive) {
       if (isSessionActive) {
+        // Sessão ativa, mostrar "Meu perfil" e ocultar "Faça login/crie seu login"
         perfilButton.style.display = "block";
         loginLink.style.display = "none";
       } else {
+        // Sessão inativa, mostrar "Faça login/crie seu login" e ocultar "Meu perfil"
         perfilButton.style.display = "none";
         loginLink.style.display = "block";
       }
     });
   }
 
+  // Chame a função para alternar os elementos com base no estado da sessão
   toggleSessionElements();
 
+
 </script>
+
+
 </body>
 
 </html>
